# mhs_python_course

./: pyproject.toml
hw_1/: nl.py  tail.py  wc.py
hw_1/artifacts/: test_results.txt
hw_2/: Dockerfile  __init__.py  generate_artifacts.py  latex_gen.py
hw_2/artifacts/: README.md  example.tex
hw_3/: __init__.py  generate_artifacts.py  matrix.py  matrix_with_mixins.py  mixins.py
hw_3/artifacts/: hash.txt
