[project]
name = "mhs_python_course"
version = "0.1.0"
description = "MHS Python Course Homework"
requires-python = ">=3.8"
dependencies = [
    "Pillow>=10.0.0",
    "numpy>=1.20.0",
]

[tool.setuptools]
packages = ["hw_2", "hw_3"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

